--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
 			<div class="col-lg-7 col-md-7 col-sm-12" id="welpg">
 			<h3 class="wel-pup">World's 1st Meme Token with NFT & Metaverse Gaming</h3>
 			<p class="wel-para">Metaverse Gaming based on PLAY2EARN gaming concept. One of the most highly rewarded tokens with a reward of 11%. The longer you stay, the more you earn.</p>
-			<p class="wel-para1">Pre-sales starts from 23rd December</p>
+			<p class="wel-para1">Pre-sales starts from 27en Dec on PinkSale & 28th Dec on PancakeSwap</p>
 			<div class="row">
 				<div class="wel-btn col-lg-4 col-md-4 col-sm-12">
 					<!-- <div class="wel-btn col-lg-6">				 -->
@@ -97,7 +97,10 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
 						<a href=""><img src="images/pinks.png"></a>
 					</div>
 					<div class="wel-btn col-lg-4 col-md-4 col-sm-12">	
-						<a href=""><img src="images/PancackeSwap.png"></a>
+						<a href=""><img src="images/PancackeSwap1.png" class="pcs"></a>
+					</div>
+					<div class="wel-btn col-lg-4 col-md-4 col-sm-12">	
+						<a href=""><img src="images/okex.png"></a>
 					</div>
 				</div>
 			</div>
